--- a/index.html
+++ b/index.html
@@ -2,9 +2,69 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    
+    <meta name="description" content="Pulkit - Developer. Portfolio and projects showcasing my skills and work in web development." />
+    <meta name="keywords" content="Pulkit, Developer, Web Development, React, Portfolio" />
+    <meta name="author" content="Pulkit" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Pulkit - Developer" />
+    <meta property="og:description" content="Pulkit - Developer. Portfolio and projects showcasing my skills and work in web development." />
+    <meta property="og:image" content="https://devpulkit.in/path/to/image.jpg" />
+    <meta property="og:url" content="https://devpulkit.in" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Pulkit - Developer" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pulkit - Developer" />
+    <meta name="twitter:description" content="Pulkit - Developer. Portfolio and projects showcasing my skills and work in web development." />
+    <meta name="twitter:image" content="https://devpulkit.in/path/to/image.jpg" />
+    <meta name="twitter:site" content="@devpulkitt" />
+
+    <!-- Canonical Tag -->
+    <link rel="canonical" href="https://devpulkit.in" />
+
+    <!-- Title Tag -->
+    <title>Pulkit - Developer</title>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Pulkit",
+        "jobTitle": "Developer",
+        "url": "https://devpulkit.in",
+        "sameAs": [
+          "http://linkedin.com/in/yourprofile",
+          "http://github.com/yourprofile"
+        ]
+      }
+    </script>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
+
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Pulkit",
+        "jobTitle": "Developer",
+        "url": "http://yourwebsite.com",
+        "sameAs": [
+          "http://linkedin.com/in/yourprofile",
+          "http://github.com/yourprofile"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
